feat cadastro e login de usuario

--- a/repositorio/backend/EasyHost.Api/appsettings.json
+++ b/repositorio/backend/EasyHost.Api/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "Default": "Server=localhost,1433;Database=EasyHostBd;User Id=sa;Password=EasyHost123;TrustServerCertificate=True;Encrypt=False;"
   },
+  
+  "Jwt": {
+    "Secret": "w4FHdV8X3fS5QkZLa0b9UcTjN7PxR2Me3JhK6NmO1Ts=",
+    "ExpiresMinutes": "60"
+  },
   "AllowedHosts": "*"
 }
